--- a/public/html/G_deng.html
+++ b/public/html/G_deng.html
@@ -41,8 +41,8 @@
 
           <input id="passwd" class="put3" type="checkbox" name="" value=""><i class="put3_1">记住用户名</i> <a href="#"><i class="put3_2">忘记密码？</i></a>
 
-          <div class="denglu">
-            <p id="login" class="denglu_1"><a href="#">登&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</a></p>
+          <div id="login" class="denglu">
+            <p class="denglu_1"><a href="#">登&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</a></p>
           </div>
 
           <span id="last">还没有账号?</span><a class="last_1" href="#">立即注册</a>
@@ -64,8 +64,6 @@
       });
 
       $("#login").click(function() {
-        console.log($("#user").val());
-
         $.ajax({
           method: "post",
           url: "/g/login",
@@ -75,6 +73,13 @@
           },
         }).done(function(data, status, jqXHR) {
           console.log(data);
+          if (data.login) {
+            window.locat = "/";
+          } else {
+            alert("用户或者密码错误");
+          };
+        }).fail(function (jqXHR, status, err) {
+          console.log(err);
         });
 
       });
