--- a/public/html/G_zhu.html
+++ b/public/html/G_zhu.html
@@ -19,10 +19,10 @@
           <button type="button" name="button">返回首页</button>
         </div>
         <div class="top5">
-            <a href="#">登录</a>
+            <a href="/g/logon">登录</a>
         </div>
         <div class="top6">
-            <a href="#">注册</a>
+            <a href="/g/login">注册</a>
         </div>
       </div>
     </div>
