--- a/public/html/G_deng.html
+++ b/public/html/G_deng.html
@@ -15,13 +15,13 @@
         <div class="top3"><img src="../images/anniversary.png" alt=""></div>
 
         <div class="top4">
-          <button type="button" name="button">返回首页</button>
+          <button type="button" name="button"><a href="/">返回首页</a></button>
         </div>
         <div class="top5">
-            <a href="#">登录</a>
+            <a href="/g/logon">登录</a>
         </div>
         <div class="top6">
-            <a href="#">注册</a>
+            <a href="/g/login">注册</a>
         </div>
       </div>
     </div>
@@ -35,11 +35,11 @@
           <div class="tu1"> <img class="tu3" src="../images/success.png" alt=""></div>
           <!-- <div class="tu2"> <img src="../images/log-pwd.png" alt=""></div> -->
           <i class=" icon iconfont icon-wxbzhanghu"></i>
-          <input class="put1" type="text" placeholder="请输入您的手机号">
+          <input  id="user" class="put1" type="text" placeholder="请输入您的手机号或者用户名">
           <i class=" icon iconfont icon-iconfontwujingongju"></i>
-          <input id="user" class="put2" type="text" placeholder="密码">
+          <input id="passwd" class="put2" type="text" placeholder="密码">
 
-          <input id="passwd" class="put3" type="checkbox" name="" value=""><i class="put3_1">记住用户名</i> <a href="#"><i class="put3_2">忘记密码？</i></a>
+          <input class="put3" type="checkbox" name="" value=""><i class="put3_1">记住用户名</i> <a href="#"><i class="put3_2">忘记密码？</i></a>
 
           <div id="login" class="denglu">
             <p class="denglu_1"><a href="#">登&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</a></p>
@@ -64,23 +64,34 @@
       });
 
       $("#login").click(function() {
-        $.ajax({
-          method: "post",
-          url: "/g/login",
-          data: {
-            user: $("#user").val(),
-            passwd: $("#passwd").val()
-          },
-        }).done(function(data, status, jqXHR) {
-          console.log(data);
-          if (data.login) {
-            window.locat = "/";
-          } else {
-            alert("用户或者密码错误");
-          };
-        }).fail(function (jqXHR, status, err) {
-          console.log(err);
-        });
+        var a = $("#user").val(),
+            b = $("#passwd").val();
+
+        console.log(a, "a");
+        console.log(b, "b");
+
+        if (!a || !b) {
+          console.log("没有发送");
+        } else {
+          $.ajax({
+            method: "post",
+            url: "/g/logon",
+            data: {
+              user: a,
+              passwd: b
+            },
+          }).done(function(data, status, jqXHR) {
+            console.log(data);
+            if (data.login) {
+              window.location = data.url;
+            } else {
+              alert("用户或者密码错误");
+            };
+          }).fail(function (jqXHR, status, err) {
+            console.log(err);
+          });
+          console.log("发送了。。。");
+        };
 
       });
     </script>
