--- a/public/html/G_zhu.html
+++ b/public/html/G_zhu.html
@@ -16,7 +16,7 @@
         <div class="top3"><img src="../images/anniversary.png" alt=""></div>
 
         <div class="top4">
-          <button type="button" name="button">返回首页</button>
+          <button type="button" name="button"><a href="/">返回首页</a></button>
         </div>
         <div class="top5">
             <a href="/g/logon">登录</a>
@@ -35,11 +35,28 @@
         <i class=" icon iconfont icon-wxbzhanghu"></i>
         <input class="put1" type="text" placeholder="请输入您的手机号">
         <i class=" icon iconfont icon-iconfontwujingongju"></i>
-        <input class="put2" type="text" placeholder="密码">
+        <input class="put2" type="password" placeholder="密码">
         <i class=" icon iconfont icon-iconfontwujingongju logo"></i>
-        <input class="put3" type="text" placeholder="确认密码">
+        <input class="put3" type="password" placeholder="确认密码">
         <i class=" icon iconfont icon-gerenshimingrz"></i>
-        <input class="put4" type="text" placeholder="验证码"> <div class="put4_1"></div>
+        <input class="put4" type="text" placeholder="图片验证码"> <div class="put4_1"></div>
+        <i class=" icon iconfont icon-iconfontshouji"></i>
+        <input class="put5" type="text" placeholder="手机验证码"> <div class="put5_1"><a class="put5_2" href="#">获取手机验证码</a></div>
+        <input id="passwd" class="put6" type="checkbox" name="" value=""><i class="put6_1">我已阅读并同意 微金所《服务协议》</i>
+
+        <div id="login" class="zhuce1">
+          <p class="zhuce1_1"><a href="#">注&nbsp;册</a></p>
+        </div>
+
+        <span id="last">已有账号?</span><a class="last_1" href="/g/logon">立即登录</a>
+
+        <div class="foot">
+          <p class="footer">©版权所有©深圳微金所金融信息服务有限公司 粤ICP备 16000732号-1</p>
+        </div>
+
+        <div class="tu">
+          <a href="/"><img src="../images/1.jpg" alt=""></a>
+        </div>
       </div>
     </div>
   </div>
